--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Welcome to the Hangman Game!</title>
 
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="assets/javascript/game.js"></script>
-	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cyborg/bootstrap.min.css" rel="stylesheet" integrity="sha384-D9XILkoivXN+bcvB2kSOowkIvIcBbNdoDQvfBNsxYAIieZbx8/SI4NeUvrRGCpDi" crossorigin="anonymous">
 
@@ -16,16 +16,24 @@
 		text-align: center;
 	}
 
+	#wins, #guesses, #ltrguess, #hint {
+		text-align: left;
+	}
+
+
 </style>
 	<h1>Hangman Game</h1>
+	<h2>*Press any key to get started!*</h2>
 	<hr>
-	<h2>Press any key to get started!</h2>
+	<div id="buttons" class="btn btn-info"></div>
+	<hr>
+	<div id="word"><h2></h2></div>
+	<hr>
+	<div id="hint"><h3>Hint:</h3></div>
 	<div id="wins"><h3>Wins:</h3></div>
-	<div id="guesses"><h3>Guesses Left:</h3></div>
-	<div id="letterguess"><h3>Letters already guessed:</h3></div>
-	<hr>
-	<button class="btn btn-info">A</button>
-	<hr>
-	<div id="replay" button class="btn btn-default">Play again</div>
+	<div id="guesses"><h3>Guesses Left: </h3></div>
+	<div id="ltrguess"><h3>Letters guessed:</h3></div>
+	<br>
+	<div id="replay" button class="btn btn-primary">Play again</div>
 </body>
 </html>
