--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		text-align: center;
 	}
 
-	#wins, #guesses, #ltrguess, #hint {
+	#wins, #guesses, #ltrguess, #hint, #category {
 		text-align: left;
 	}
 
